<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bg_toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/lin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        android:baselineAligned="false"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:background="@color/black"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTimer"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/txt_flag_challenge_title"
                android:textColor="@color/bg_toolbar"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/txt_schedule"
        android:textColor="@color/bg_toolbar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/lin_title"
        tools:layout_editor_absoluteX="16dp"
        android:padding="10dp"/>

    <LinearLayout
        android:id="@+id/linTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txt_schedule"
        tools:layout_editor_absoluteX="16dp"
        android:baselineAligned="false"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_hour"/>

            <EditText
                android:id="@+id/txt_hr"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:text="00"
                android:hint="00">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_min" />

            <EditText
                android:id="@+id/txt_min"
                android:layout_width="50dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:text="00"
                android:hint="00">


            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_sec" />

            <EditText
                android:id="@+id/txt_sec"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:autofillHints="00"
                android:maxLength="2"
                android:inputType="number"
                android:text="10"
                android:hint="00">

            </EditText>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/button_save"
        android:layout_width="199dp"
        android:layout_height="55dp"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linTimer"
        tools:layout_editor_absoluteY="103dp"
        android:onClick="saveDuration"/>

</androidx.constraintlayout.widget.ConstraintLayout>