<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bg_toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/lin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:background="@color/black"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/main_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTimer"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/txt_flag_challenge_title"
                android:textColor="@color/bg_toolbar"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lin_title"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_challenge"
            android:textSize="16sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_will_start_in"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/txt_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_timer_count"
            android:textSize="16sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lay_timer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_orange"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_question_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="1">

                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/guss_the_country_from_the_flag"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lay_question"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img_flag"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@drawable/in_flag">

            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rel_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/option1"
                    style="@style/CardView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"

                    android:layout_weight="1"
                    android:background="@drawable/grey_border_custom"
                    android:gravity="center"
                    android:text="India"
                    android:textColor="@color/green" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rel_option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/option3"
                    style="@style/CardView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"

                    android:layout_weight="1"
                    android:background="@drawable/green_border_custom"
                    android:gravity="center"
                    android:text="India"
                    android:textColor="@color/green" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rel_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/option2"
                    style="@style/CardView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"

                    android:layout_weight="1"
                    android:background="@drawable/grey_border_custom"
                    android:gravity="center"
                    android:text="Malasiya"
                    android:textColor="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rel_option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/option4"
                    style="@style/CardView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"

                    android:layout_weight="1"
                    android:background="@drawable/grey_border_custom"
                    android:gravity="center"
                    android:text="India"
                    android:textColor="@color/grey" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/txt_answer_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Wrong"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/lay_options"/>
    <TextView
        android:id="@+id/txt_game_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/game_over"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txt_answer_status" />

    <LinearLayout
        android:id="@+id/lay_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/txt_game_over">

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="SCORE :"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="70/100"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>